aligned references so that translations validate

--- a/l10n/de-de/xml/admin_ds_backup.xml
+++ b/l10n/de-de/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     Installieren Sie den Knoten neu. Weitere Informationen finden Sie in <xref linkend="deploy-os"/>.
+     Installieren Sie den Knoten neu. Weitere Informationen finden Sie in <xref linkend="deploy-sles"/>.
     </para>
    </listitem>
    <listitem>
