--- a/l10n/de-de/xml/admin_saltcluster.xml
+++ b/l10n/de-de/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     Installieren Sie SUSE Linux Enterprise Server und SUSE Enterprise Storage auf dem neuen Host. Weitere Informationen finden Sie im <xref linkend="deploy-os"/>.
+     Installieren Sie SUSE Linux Enterprise Server und SUSE Enterprise Storage auf dem neuen Host. Weitere Informationen finden Sie im <xref linkend="deploy-sles"/>.
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Installieren Sie SUSE Linux Enterprise Server 15 SP2 auf dem neuen Salt Master entsprechend dem im <xref linkend="deploy-os"/> beschriebenen Verfahren.
+     Installieren Sie SUSE Linux Enterprise Server 15 SP2 auf dem neuen Salt Master entsprechend dem im <xref linkend="deploy-sles"/> beschriebenen Verfahren.
     </para>
     <tip>
      <title>Übergang der Salt Minions</title>
