--- a/l10n/es-es/xml/admin_ds_backup.xml
+++ b/l10n/es-es/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     Vuelva a instalar el nodo. Encontrará más información en <xref linkend="deploy-os"/>
+     Vuelva a instalar el nodo. Encontrará más información en <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
