--- a/l10n/es-es/xml/admin_saltcluster.xml
+++ b/l10n/es-es/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     Instale SUSE Linux Enterprise Server y SUSE Enterprise Storage en el nuevo host. Consulte el <xref linkend="deploy-os"/> para obtener más información.
+     Instale SUSE Linux Enterprise Server y SUSE Enterprise Storage en el nuevo host. Consulte el <xref linkend="deploy-sles"/> para obtener más información.
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Instale SUSE Linux Enterprise Server 15 SP2 en el nuevo master de Salt siguiendo el procedimiento descrito en el <xref linkend="deploy-os"/>.
+     Instale SUSE Linux Enterprise Server 15 SP2 en el nuevo master de Salt siguiendo el procedimiento descrito en el <xref linkend="deploy-sles"/>.
     </para>
     <tip>
      <title>transición de los minions de Salt</title>
