--- a/l10n/fr-fr/xml/admin_ds_backup.xml
+++ b/l10n/fr-fr/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     Réinstallez le noeud. Pour plus d'informations, reportez-vous au document <xref linkend="deploy-os"/>
+     Réinstallez le noeud. Pour plus d'informations, reportez-vous au document <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
