--- a/l10n/fr-fr/xml/admin_saltcluster.xml
+++ b/l10n/fr-fr/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     Installez SUSE Linux Enterprise Server et SUSE Enterprise Storage sur le nouvel hôte. Reportez-vous au <xref linkend="deploy-os"/> (Guide de sécurité, Chapitre 17 « Masquage et pare-feu ») pour plus d'informations.
+     Installez SUSE Linux Enterprise Server et SUSE Enterprise Storage sur le nouvel hôte. Reportez-vous au <xref linkend="deploy-sles"/> (Guide de sécurité, Chapitre 17 « Masquage et pare-feu ») pour plus d'informations.
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Installez SUSE Linux Enterprise Server 15 SP2 sur le nouveau Salt Master en suivant la procédure décrite dans le <xref linkend="deploy-os"/>.
+     Installez SUSE Linux Enterprise Server 15 SP2 sur le nouveau Salt Master en suivant la procédure décrite dans le <xref linkend="deploy-sles"/>.
     </para>
     <tip>
      <title>transition des minions Salt</title>
