--- a/l10n/fr-fr/xml/dashboard_about.xml
+++ b/l10n/fr-fr/xml/dashboard_about.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  Ceph Dashboard est une application Web intégrée de gestion et de surveillance Ceph qui permet de gérer divers aspects et objets de la grappe. Le tableau de bord est automatiquement activé après le déploiement de la grappe de base, comme décrit dans le <xref linkend="deploy-cephadm-day1"/>.
+  Ceph Dashboard est une application Web intégrée de gestion et de surveillance Ceph qui permet de gérer divers aspects et objets de la grappe. Le tableau de bord est automatiquement activé après le déploiement de la grappe de base, comme décrit dans le <xref linkend="deploy-core"/>.
  </para>
  <para>
   Ceph Dashboard pour SUSE Enterprise Storage 7 ajoute à Ceph Manager davantage de fonctionnalités de gestion Web pour faciliter l'administration de Ceph, notamment la surveillance et l'administration des applications. Vous n'avez plus besoin de connaître les commandes complexes relatives à Ceph pour gérer et surveiller votre grappe Ceph. Vous pouvez utiliser l'interface intuitive de Ceph Dashboard ou son API REST intégrée.
