--- a/l10n/it-it/xml/admin_ds_backup.xml
+++ b/l10n/it-it/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     Reinstallare il nodo. Per ulteriori informazioni, vedere <xref linkend="deploy-os"/>
+     Reinstallare il nodo. Per ulteriori informazioni, vedere <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
