--- a/l10n/it-it/xml/admin_saltcluster.xml
+++ b/l10n/it-it/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     Installare SUSE Linux Enterprise Server e SUSE Enterprise Storage sul nuovo host. Per ulteriori informazioni consultare <xref linkend="deploy-os"/>.
+     Installare SUSE Linux Enterprise Server e SUSE Enterprise Storage sul nuovo host. Per ulteriori informazioni consultare <xref linkend="deploy-sles"/>.
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Installare SUSE Linux Enterprise Server 15 SP2 sul nuovo Salt Master seguendo la procedura descritta in <xref linkend="deploy-os"/>.
+     Installare SUSE Linux Enterprise Server 15 SP2 sul nuovo Salt Master seguendo la procedura descritta in <xref linkend="deploy-sles"/>.
     </para>
     <tip>
      <title>transizione del Salt Minion</title>
