--- a/l10n/ja-jp/xml/admin_ds_backup.xml
+++ b/l10n/ja-jp/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     ノードを再インストールします。詳細については、<xref linkend="deploy-os"/>を参照してください。
+     ノードを再インストールします。詳細については、<xref linkend="deploy-sles"/>を参照してください。
     </para>
    </listitem>
    <listitem>
