--- a/l10n/ja-jp/xml/admin_saltcluster.xml
+++ b/l10n/ja-jp/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     SUSE Linux Enterprise ServerとSUSE Enterprise Storageを新規ホストにインストールします。詳細については、<xref linkend="deploy-os"/>を参照してください。
+     SUSE Linux Enterprise ServerとSUSE Enterprise Storageを新規ホストにインストールします。詳細については、<xref linkend="deploy-sles"/>を参照してください。
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     SUSE Linux Enterprise Server 15 SP2を新しいSalt Masterにインストールします。手順は<xref linkend="deploy-os"/>を参照してください。
+     SUSE Linux Enterprise Server 15 SP2を新しいSalt Masterにインストールします。手順は<xref linkend="deploy-sles"/>を参照してください。
     </para>
     <tip>
      <title>Salt Minionの移行</title>
