--- a/l10n/pt-br/xml/admin_ds_backup.xml
+++ b/l10n/pt-br/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     Reinstale o nó. Mais informações podem ser encontradas no <xref linkend="deploy-os"/>
+     Reinstale o nó. Mais informações podem ser encontradas no <xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
