--- a/l10n/pt-br/xml/admin_saltcluster.xml
+++ b/l10n/pt-br/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     Instale o SUSE Linux Enterprise Server e o SUSE Enterprise Storage no novo host. Consulte o <xref linkend="deploy-os"/> para obter mais informações.
+     Instale o SUSE Linux Enterprise Server e o SUSE Enterprise Storage no novo host. Consulte o <xref linkend="deploy-sles"/> para obter mais informações.
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     Instale o SUSE Linux Enterprise Server 15 SP2 no novo Master Salt seguindo o procedimento descrito no <xref linkend="deploy-os"/>.
+     Instale o SUSE Linux Enterprise Server 15 SP2 no novo Master Salt seguindo o procedimento descrito no <xref linkend="deploy-sles"/>.
     </para>
     <tip>
      <title>Transição de Minion Salt</title>
