--- a/l10n/zh-cn/xml/admin_saltcluster.xml
+++ b/l10n/zh-cn/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     在新主机上安装 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage。有关更多信息，请参考<xref linkend="deploy-os"/>。
+     在新主机上安装 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage。有关更多信息，请参考<xref linkend="deploy-sles"/>。
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     按照<xref linkend="deploy-os"/>中所述的过程在新的 Salt Master 上安装 SUSE Linux Enterprise Server 15 SP2。
+     按照<xref linkend="deploy-sles"/>中所述的过程在新的 Salt Master 上安装 SUSE Linux Enterprise Server 15 SP2。
     </para>
     <tip>
      <title>转换 Salt Minion</title>
