--- a/l10n/zh-cn/xml/dashboard_about.xml
+++ b/l10n/zh-cn/xml/dashboard_about.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  Ceph Dashboard 是一个内置的基于 Web 的 Ceph 管理和监控应用，负责管理集群的各个方面和对象。在<xref linkend="deploy-cephadm-day1"/>中部署基本集群后，将自动启用该仪表盘。
+  Ceph Dashboard 是一个内置的基于 Web 的 Ceph 管理和监控应用，负责管理集群的各个方面和对象。在<xref linkend="deploy-core"/>中部署基本集群后，将自动启用该仪表盘。
  </para>
  <para>
   Ceph Dashboard for SUSE Enterprise Storage 7 添加了更多基于 Web 的管理功能（包括对 Ceph Manager 的监控和应用管理），让 Ceph 管理变得更轻松。现在，您不必了解复杂的 Ceph 相关命令，便可轻松管理和监控您的 Ceph 集群。您可以使用 Ceph Dashboard 的直观界面，也可以使用其内置 REST API。
