--- a/l10n/zh-tw/xml/admin_ds_backup.xml
+++ b/l10n/zh-tw/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     重新安裝節點。如需詳細資訊，請參閱<xref linkend="deploy-os"/>。
+     重新安裝節點。如需詳細資訊，請參閱<xref linkend="deploy-sles"/>。
     </para>
    </listitem>
    <listitem>
