--- a/l10n/zh-tw/xml/admin_saltcluster.xml
+++ b/l10n/zh-tw/xml/admin_saltcluster.xml
@@ -44,7 +44,7 @@
   <procedure>
    <step>
     <para>
-     在新主機上安裝 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage。如需相關資訊，請參閱<xref linkend="deploy-os"/>。
+     在新主機上安裝 SUSE Linux Enterprise Server 和 SUSE Enterprise Storage。如需相關資訊，請參閱<xref linkend="deploy-sles"/>。
     </para>
    </step>
    <step>
@@ -1124,7 +1124,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </step>
    <step>
     <para>
-     依據<xref linkend="deploy-os"/>中所述的程序，在新的 Salt Master 上安裝 SUSE Linux Enterprise Server 15 SP2。
+     依據<xref linkend="deploy-sles"/>中所述的程序，在新的 Salt Master 上安裝 SUSE Linux Enterprise Server 15 SP2。
     </para>
     <tip>
      <title>轉換 Salt Minion</title>
