--- a/l10n/ja-jp/xml/dashboard_about.xml
+++ b/l10n/ja-jp/xml/dashboard_about.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  CephダッシュボードはWebベースのCeph管理/監視用ビルトインアプリケーションで、クラスタの様々な側面とオブジェクトを管理します。<xref linkend="deploy-cephadm-day1"/>で基本的なクラスタが展開されると、ダッシュボードは自動的に有効化されます。
+  CephダッシュボードはWebベースのCeph管理/監視用ビルトインアプリケーションで、クラスタの様々な側面とオブジェクトを管理します。<xref linkend="deploy-core"/>で基本的なクラスタが展開されると、ダッシュボードは自動的に有効化されます。
  </para>
  <para>
   SUSE Enterprise Storage 7用のCephダッシュボードには、Webベースの管理機能が追加され、Ceph Managerの監視やアプリケーション管理などのCephの管理が容易になりました。Ceph関連の複雑なコマンドを知らなくても、Cephクラスタを管理および監視できるようになりました。Cephダッシュボードの直感的なインタフェース、またはその組み込みREST APIのいずれかを使用できます。
