--- a/l10n/ja-jp/xml/deploy_cephadm.xml
+++ b/l10n/ja-jp/xml/deploy_cephadm.xml
@@ -40,7 +40,7 @@
    </para>
   </listitem>
  </orderedlist>
- <sect1 xml:id="deploy-os">
+ <sect1 xml:id="deploy-sles">
   <title>SUSE Linux Enterprise Serverのインストールと設定</title>
 
   <procedure>
@@ -225,7 +225,7 @@ minion1:
    </step>
   </procedure>
  </sect1>
- <sect1 xml:id="deploy-cephadm-day1">
+ <sect1 xml:id="deploy-core">
   <title>Cephクラスタの展開</title>
 
   <para>
