--- a/l10n/zh-cn/xml/admin_ds_backup.xml
+++ b/l10n/zh-cn/xml/admin_ds_backup.xml
@@ -103,7 +103,7 @@
   <orderedlist>
    <listitem>
     <para>
-     重新安装节点。有关详细信息，请参见<xref linkend="deploy-os"/>
+     重新安装节点。有关详细信息，请参见<xref linkend="deploy-sles"/>
     </para>
    </listitem>
    <listitem>
