--- a/l10n/zh-tw/xml/dashboard_about.xml
+++ b/l10n/zh-tw/xml/dashboard_about.xml
@@ -8,7 +8,7 @@
   </dm:docmanager>
  </info>
  <para>
-  Ceph Dashboard 是一種內建的基於 Web 的 Ceph 管理和監控應用程式，負責管理叢集的各個方面和物件。在<xref linkend="deploy-cephadm-day1"/>中部署基本叢集後，將自動啟用該儀表板。
+  Ceph Dashboard 是一種內建的基於 Web 的 Ceph 管理和監控應用程式，負責管理叢集的各個方面和物件。在<xref linkend="deploy-core"/>中部署基本叢集後，將自動啟用該儀表板。
  </para>
  <para>
   Ceph Dashboard for SUSE Enterprise Storage 7 新增了更多基於 Web 的管理功能 (包括對 Ceph 管理員的監控和應用程式管理)，讓 Ceph 管理變得更輕鬆。現在，您不必瞭解複雜的 Ceph 相關指令，便可輕鬆管理和監控您的 Ceph 叢集。您可以使用 Ceph Dashboard 的直觀介面，也可以使用其內建的 REST API。
