--- a/l10n/zh-tw/xml/deploy_cephadm.xml
+++ b/l10n/zh-tw/xml/deploy_cephadm.xml
@@ -40,7 +40,7 @@
    </para>
   </listitem>
  </orderedlist>
- <sect1 xml:id="deploy-os">
+ <sect1 xml:id="deploy-sles">
   <title>安裝和設定 SUSE Linux Enterprise Server</title>
 
   <procedure>
@@ -225,7 +225,7 @@ minion1:
    </step>
   </procedure>
  </sect1>
- <sect1 xml:id="deploy-cephadm-day1">
+ <sect1 xml:id="deploy-core">
   <title>部署 Ceph 叢集</title>
 
   <para>
