--- a/l10n/zh-tw/xml/bp_troubleshooting_cephadm.xml
+++ b/l10n/zh-tw/xml/bp_troubleshooting_cephadm.xml
@@ -475,7 +475,7 @@ Failed to connect to node5 (node5.example.com).
 
   <para>
    If this succeeds, the cluster does not have proper name resolution. Refer to
-   <xref linkend="deploy-os"/> for more details.
+   <xref linkend="deploy-sles"/> for more details.
   </para>
  </sect1>
  <sect1 xml:id="bp-troubleshooting-unmanaged-daemons">
