Update SUSE doc toolchain install URL
Signed-off-by: Tim Serong <tserong@suse.com>

--- a/README.adoc
+++ b/README.adoc
@@ -65,7 +65,7 @@ To contribute to the documentation, you need to write DocBook.
 +
 [source]
 ----
-sudo /sbin/OneClickInstallUI https://gitlab.nue.suse.com/susedoc/doc-ymp/raw/master/Documentation.ymp
+sudo OneClickInstallUI https://susedoc.github.io/ymp/Documentation.ymp
 ----
 
 * Basic DAPS usage:
