--- a/l10n/ses/it-it/xml/admin_caasp_advanced_config.xml
+++ b/l10n/ses/it-it/xml/admin_caasp_advanced_config.xml
@@ -74,7 +74,7 @@
    <para>
     Most of the examples make use of the <command>ceph</command> client
     command. A quick way to use the Ceph client suite is from a
-    <link xlink:href="ceph-toolbox.md">Rook Toolbox container</link>.
+    <link xlink:href="https://github.com/rook/rook/blob/master/Documentation/ceph-toolbox.md">Rook Toolbox container</link>.
    </para>
    <para>
     The Kubernetes based examples assume Rook OSD pods are in the
