--- a/l10n/ses/it-it/xml/admin_caasp_block.xml
+++ b/l10n/ses/it-it/xml/admin_caasp_block.xml
@@ -31,7 +31,7 @@
 
   <para>
    Each OSD must be located on a different node, because the
-   <link xlink:href="ceph-pool-crd.md#spec"><literal>failureDomain</literal></link>
+   <link xlink:href="https://github.com/rook/rook/blob/release-1.4/Documentation/ceph-pool-crd.md#spec"><literal>failureDomain</literal></link>
    is set to <literal>host</literal> and the <literal>replicated.size</literal>
    is set to <literal>3</literal>.
   </para>
@@ -40,7 +40,7 @@
    <para>
     This example uses the CSI driver, which is the preferred driver going
     forward for Kubernetes 1.13 and newer. Examples are found in the
-    <link xlink:href="https://github.com/rook/rook/tree/%7B%7B%20branchName%20%7D%7D/cluster/examples/kubernetes/ceph/csi/rbd">CSI
+    <link xlink:href="https://github.com/rook/rook/tree/release-1.4/cluster/examples/kubernetes/ceph/csi/rbd">CSI
     RBD</link> directory.
    </para>
   </note>
@@ -232,7 +232,7 @@ wordpress   10.3.0.155   &lt;pending&gt;     80:30841/TCP   2m</screen>
    <para>
     The erasure-coded pool must be set as the <literal>dataPool</literal>
     parameter in
-    <link xlink:href="https://github.com/rook/rook/blob/%7B%7B%20branchName%20%7D%7D/cluster/examples/kubernetes/ceph/csi/rbd/storage-class-ec.yaml"><literal>storageclass-ec.yaml</literal></link>
+    <link xlink:href="https://github.com/rook/rook/blob/release-1.4/cluster/examples/kubernetes/ceph/csi/rbd/storageclass-ec.yaml"><literal>storageclass-ec.yaml</literal></link>
     It is used for the data of the RBD images.
    </para>
   </sect2>
