--- a/l10n/ses/zh-tw/xml/admin_caasp_crd.xml
+++ b/l10n/ses/zh-tw/xml/admin_caasp_crd.xml
@@ -880,7 +880,7 @@ mgr:
          This StorageClass should provide a raw block device, multipath device,
          or logical volume. Other types are not supported. If you want to use
          logical volumes, please see the known issue of OSD on LV-backed PVC:
-         <link xlink:href="ceph-common-issues.md#lvm-metadata-can-be-corrupted-with-osd-on-lv-backed-pvc"/>
+         <link xlink:href="https://github.com/rook/rook/blob/master/Documentation/ceph-common-issues.md#lvm-metadata-can-be-corrupted-with-osd-on-lv-backed-pvc"/>
         </para>
        </listitem>
        <listitem>
